--- a/sampleStore/public/css/app.css
+++ b/sampleStore/public/css/app.css
@@ -69,7 +69,7 @@ body {
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
-  color: #212529;
+  color:black;
   text-align: left;
   background-color: #ffffff;
 }
