Home original + categorias
update to original home

--- a/sampleStore/public/css/app.css
+++ b/sampleStore/public/css/app.css
@@ -10894,7 +10894,7 @@ a {
 body {
   width: 100%;
   height: auto;
-  background-color: #272727;
+  background-color: #ffffff;
   font-family: "Montserrat", sans-serif;
 }
 
