--- a/sampleStore/public/css/app.css
+++ b/sampleStore/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto);@import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Roboto);@import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap);
 
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
