--- a/sampleStore/public/css/app.css
+++ b/sampleStore/public/css/app.css
@@ -1,4 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Roboto);@import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@400;
+
+500;600&display=swap);@charset "UTF-8";
 
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
@@ -6,7 +8,6 @@
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-
 :root {
   --blue: #3490dc;
   --indigo: #6574cd;
@@ -10879,6 +10880,166 @@ a.text-dark:focus {
   .table .thead-dark th {
     color: inherit;
     border-color: #dee2e6;
+  }
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none !important;
+}
+
+body {
+  width: 100%;
+  height: auto;
+  background-color: #272727;
+  font-family: "Montserrat", sans-serif;
+}
+
+body nav {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 250px;
+  z-index: 99;
+}
+
+body .logo {
+  z-index: 100;
+}
+
+body .logo img {
+  width: 140px;
+}
+
+body ul {
+  transition: 150ms ease;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+
+body ul li:not(:last-child) a {
+  margin-right: 60px;
+  text-decoration: none;
+  color: white;
+}
+
+body ul li a {
+  transition: 100ms ease;
+}
+
+body ul li a:hover {
+  color: #dddddd;
+}
+
+body #cart-icon {
+  width: 40px;
+}
+
+body .menu-icon {
+  position: absolute;
+  top: 42px;
+  right: 50px;
+  display: none;
+  cursor: pointer;
+  z-index: 100;
+}
+
+.login-button {
+  font-weight: 600;
+}
+
+.register-button {
+  background-color: #E51E27;
+  padding: 8px 20px;
+  border-radius: 10px;
+  font-weight: 600;
+  transition: 150ms ease-in-out;
+  color: white;
+  text-decoration: none;
+}
+
+.register-button:hover {
+  background-color: white;
+  color: #E51E27;
+}
+
+.open {
+  transform: translateX(0);
+}
+
+@media screen and (max-width: 1250px) {
+  nav {
+    padding: 20px 150px !important;
+  }
+}
+
+@media screen and (max-width: 1050px) {
+  nav {
+    padding: 20px 50px !important;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  nav {
+    padding: 20px 50px !important;
+  }
+
+  nav ul {
+    transform: translateX(100%);
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    flex-flow: column;
+    background-color: #222222;
+  }
+
+  nav ul li {
+    margin: 25px;
+  }
+
+  nav ul li a {
+    margin-right: 0 !important;
+  }
+
+  .register-button {
+    background-color: #E51E27;
+    color: white;
+  }
+
+  .register-button:hover {
+    color: #E51E27;
+    background-color: white;
+  }
+
+  #cart-icon {
+    width: 40px;
+    display: none;
+  }
+
+  .menu-icon {
+    display: block !important;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  nav {
+    padding: 20px !important;
+  }
+
+  .menu-icon {
+    right: 20px !important;
   }
 }
 
