home layout (fazer ajustes carrousel / template)

--- a/sampleStore/resources/sass/menu.scss
+++ b/sampleStore/resources/sass/menu.scss
@@ -79,6 +79,12 @@ body{
    }
 }
 
+.nav-wrapper{
+    width: 100%;
+    background-color: $secondary-color;
+    z-index: 9;
+}
+
 // Buttons
 
 .login-button{
