--- a/sampleStore/resources/sass/app.scss
+++ b/sampleStore/resources/sass/app.scss
@@ -1,11 +1,15 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap');
 
 // Variables
 @import 'variables';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+// @import '~bootstrap/scss/bootstrap';
+
+@import 'reset';
+
+@import 'palette';
 
 @import 'menu';
 
