--- a/sampleStore/public/css/app.css
+++ b/sampleStore/public/css/app.css
@@ -152,7 +152,7 @@ body {
 
 body nav {
   width: 100%;
-  height: 100px;
+  height: 100px !important;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -206,6 +206,7 @@ body .menu-icon {
 
 .nav-wrapper {
   width: 100%;
+  height: 100px !important;
   background-color: #272727;
   z-index: 9;
 }
@@ -302,6 +303,9 @@ body .menu-icon {
 body {
   width: 100%;
   height: 100vh;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
