--- a/sampleStore/resources/sass/menu.scss
+++ b/sampleStore/resources/sass/menu.scss
@@ -18,7 +18,7 @@ body{
 
     nav{
         width: 100%;
-        height: 100px;
+        height: 100px!important;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -81,6 +81,7 @@ body{
 
 .nav-wrapper{
     width: 100%;
+    height: 100px!important;
     background-color: $secondary-color;
     z-index: 9;
 }
