--- a/sampleStore/public/css/app.css
+++ b/sampleStore/public/css/app.css
@@ -861,3 +861,139 @@ footer .copy span {
   max-width: 320px !important;
 }
 
+.sign-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Montserrat";
+}
+
+.sign-container .sign {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 1000px;
+  height: 600px;
+  background-color: #272727;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0px 40px 50px #30141436;
+}
+
+.sign-container .sign .side {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+  background-color: #E51E27;
+}
+
+.sign-container .sign .side img {
+  max-width: 60px;
+}
+
+.sign-container .sign .inputs {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+}
+
+.sign-container .sign .inputs h1 {
+  color: white;
+  font-size: 24px;
+  margin-bottom: 30px;
+}
+
+.sign-container .sign .inputs .input-field {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 15px 0;
+}
+
+.sign-container .sign .inputs .input-field input {
+  width: 50%;
+  background: none;
+  border: none;
+  border-bottom: 1px solid white;
+  outline: none;
+  color: white;
+  padding: 10px 0px;
+}
+
+.sign-container .sign .inputs .link-field {
+  margin: 50px 0 0 0;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+}
+
+.sign-container .sign .inputs .link-field span {
+  margin: 0 0 5px 0;
+}
+
+.sign-container .sign .inputs .link-field a {
+  text-decoration: none;
+  color: white;
+  font-size: 14px;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.btn-primary {
+  background: none;
+  border: none;
+  background-color: #E51E27;
+  color: white;
+  padding: 12px 56px;
+  border-radius: 8px;
+  cursor: pointer;
+  outline: none;
+  font-family: "Montserrat";
+  font-size: 18px;
+  margin: 10px 0px;
+  transition: 160ms ease-in-out;
+  font-weight: 600;
+}
+
+.btn-primary:hover {
+  background-color: white;
+  color: #E51E27;
+}
+
+@media screen and (max-width: 800px) {
+  .sign-container {
+    background-color: #272727;
+  }
+
+  .sign-container .sign {
+    box-shadow: none;
+  }
+
+  .sign-container .sign {
+    width: 100%;
+  }
+
+  .sign-container .sign .side {
+    display: none;
+  }
+
+  .sign-container .sign .inputs {
+    width: 100%;
+  }
+
+  .inputs .input-field input {
+    width: 80% !important;
+  }
+}
+
