--- a/sampleStore/resources/sass/home.scss
+++ b/sampleStore/resources/sass/home.scss
@@ -1,6 +1,6 @@
 body{
     width: 100%;
-    height: 100vh;
+    // height: 100vh;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -9,6 +9,13 @@ body{
     flex-flow: row wrap;
     background-color: $ice;
     font-family: 'Montserrat', sans-serif;
+
+    .container-app{
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
 
 
     table{
