--- a/sampleStore/resources/sass/menu.scss
+++ b/sampleStore/resources/sass/menu.scss
@@ -191,3 +191,13 @@ body{
     }
 
 }
+
+// Nav Bootstrap
+
+.nav-sample{
+    background-color: $secondary-color;
+}
+
+.sample-logo{
+    max-width: 160px;
+}
