--- a/sampleStore/public/css/app.css
+++ b/sampleStore/public/css/app.css
@@ -11183,6 +11183,14 @@ body .menu-icon {
   }
 }
 
+.nav-sample {
+  background-color: #272727;
+}
+
+.sample-logo {
+  max-width: 160px;
+}
+
 body {
   width: 100%;
   padding: 0;
@@ -11544,6 +11552,19 @@ footer .copy span {
   box-shadow: 0px 8px 20px #3a39392f;
 }
 
+.category-box a.ver-tudo {
+  position: absolute;
+  top: 90%;
+  right: 10%;
+  color: #272727;
+  font-weight: 600;
+  transition: 150ms ease;
+}
+
+.category-box a.ver-tudo:hover {
+  color: #5f5f5f;
+}
+
 .category-box .category-cover-image {
   position: relative;
   display: flex;
@@ -11560,6 +11581,7 @@ footer .copy span {
 }
 
 .category-box .category-description {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11568,7 +11590,7 @@ footer .copy span {
 
 .category-box .category-description .category-name {
   font-size: 18px;
-  margin: 10px 0 4px 0;
+  margin: 15px 0 4px 0;
   font-weight: 600;
   color: #272727;
 }
@@ -11710,6 +11732,7 @@ footer .copy span {
   align-items: center;
   flex-flow: row nowrap !important;
   width: 100%;
+  overflow: hidden;
 }
 
 .carousel-wrapper {
@@ -11719,6 +11742,8 @@ footer .copy span {
   align-items: center;
   flex-flow: row nowrap !important;
   width: 100%;
+  position: relative;
+  overflow: hidden;
 }
 
 .owl-carousel {
@@ -11751,6 +11776,9 @@ footer .copy span {
 }
 
 .sign-container {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
   width: 100%;
   height: 100vh;
   display: flex;
@@ -11813,9 +11841,10 @@ footer .copy span {
   background: none;
   border: none;
   border-bottom: 1px solid white;
-  outline: none;
+  outline: none !important;
   color: white;
-  padding: 10px 0px;
+  padding: 10px 5px;
+  border-radius: 0 !important;
 }
 
 .sign-container .sign .inputs .link-field {
@@ -11883,6 +11912,233 @@ footer .copy span {
 
   .inputs .input-field input {
     width: 80% !important;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .container {
+    width: 100% !important;
+    max-width: none !important;
+    padding: 0 !important;
+    margin: 0 !important;
+    margin: 0 !important;
+    height: auto !important;
+  }
+}
+
+.sample-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
+  padding: 50px 50px 50px 50px;
+}
+
+.sample-wrapper .all-samples-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.samples-title {
+  width: 100%;
+  margin: 20px 0px;
+  padding: 10px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 22px;
+  color: #272727;
+}
+
+.sample-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  flex-flow: column;
+}
+
+.sample-item .sample-details {
+  margin-top: 25px;
+  text-align: center;
+}
+
+.sample-item .sample-details h2 {
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.sample-item .sample-details input {
+  display: inline-block;
+}
+
+.sample-item .sample-details .double-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sample-item .sample-details .double-buttons button,
+.sample-item .sample-details .double-buttons a {
+  margin: 10px;
+  padding: 10px 20px;
+  border-radius: 10px;
+  font-weight: 600;
+  color: white;
+  transition: 150ms ease-in-out;
+  border: none;
+  background-color: #E51E27;
+  font-size: 16px;
+}
+
+.sample-item .sample-details .double-buttons button:hover,
+.sample-item .sample-details .double-buttons a:hover {
+  background-color: #f72934;
+}
+
+.sample-item .sample-details .double-buttons .button-cancel {
+  background-color: #272727;
+}
+
+.sample-item .sample-details .double-buttons .button-cancel:hover {
+  background-color: #3b3b3b;
+}
+
+.cart-container {
+  width: 100%;
+  max-width: 1450px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
+  padding: 50px 50px 50px 50px;
+}
+
+.cart-container .cart-item-total .cart-item-image {
+  background-color: #272727 !important;
+}
+
+.cart-container .cart-item,
+.cart-container .cart-item-total {
+  margin: 0px 0px 25px 0px;
+  position: relative;
+  width: 100%;
+  height: 180px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-flow: row nowrap;
+  background-color: white;
+  border-radius: 14px;
+  overflow: hidden;
+}
+
+.cart-container .cart-item .cart-item-image,
+.cart-container .cart-item-total .cart-item-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 100%;
+  max-width: 200px;
+  background-color: #E51E27;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 600;
+  color: white;
+}
+
+.cart-container .cart-item .cart-item-details,
+.cart-container .cart-item-total .cart-item-details {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 100%;
+}
+
+.cart-container .cart-item .cart-item-details p,
+.cart-container .cart-item-total .cart-item-details p {
+  font-weight: 600;
+}
+
+.cart-container .cart-item .cart-item-details p:not(:last-child),
+.cart-container .cart-item-total .cart-item-details p:not(:last-child) {
+  margin: 0px 50px 0px 0px;
+}
+
+.cart-container .cart-item .cart-delete,
+.cart-container .cart-item-total .cart-delete {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 100%;
+  max-width: 200px;
+  background-color: #E51E27;
+}
+
+.cart-container .cart-item .cart-delete img,
+.cart-container .cart-item-total .cart-delete img {
+  width: 25px;
+  cursor: pointer;
+}
+
+.double-buttons-cart {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.double-buttons-cart a {
+  margin: 10px;
+  padding: 10px 20px;
+  border-radius: 10px;
+  font-weight: 600;
+  color: white;
+  transition: 150ms ease-in-out;
+  border: none;
+  font-size: 16px;
+  transition: 150ms ease;
+}
+
+.double-buttons-cart .button-cancel {
+  background-color: #272727;
+}
+
+.double-buttons-cart .button-cancel:hover {
+  background-color: #383838;
+}
+
+.double-buttons-cart .button-checkout {
+  background-color: #E51E27;
+}
+
+.double-buttons-cart .button-checkout:hover {
+  background-color: #f0313b;
+}
+
+@media screen and (max-width: 900px) {
+  .cart-container {
+    padding: 50px 10px 0px 10px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .cart-item-details {
+    flex-flow: column wrap;
+  }
+
+  .cart-item-details p {
+    margin: 10px !important;
   }
 }
 
