--- a/sampleStore/resources/sass/sign.scss
+++ b/sampleStore/resources/sass/sign.scss
@@ -1,4 +1,7 @@
 .sign-container{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -58,9 +61,10 @@
                     background: none;
                     border: none;
                     border-bottom: 1px solid white;
-                    outline: none;
+                    outline: none!important;
                     color: white;
-                    padding: 10px 0px;
+                    padding: 10px 5px;
+                    border-radius: 0!important;
                 }
             }
 
@@ -148,4 +152,15 @@
         width: 80%!important;
     }
 
+}
+
+@media screen and (min-width: 576px){
+    .container{
+        width: 100%!important;
+        max-width: none!important;
+        padding: 0!important;
+        margin: 0!important;
+        margin: 0!important;
+        height: auto!important;
+    }
 }
