pagamento, ajustes audios, ajuste carousel

--- a/sampleStore/public/css/app.css
+++ b/sampleStore/public/css/app.css
@@ -11356,12 +11356,12 @@ body .card-body {
   cursor: default;
 }
 
-.player-container .player-controls .seekbar-wrapper #seekbar {
+.player-container .player-controls .seekbar-wrapper .seekbar {
   -webkit-appearance: none;
   width: 170px;
 }
 
-.player-container .player-controls .seekbar-wrapper #seekbar::-webkit-slider-runnable-track {
+.player-container .player-controls .seekbar-wrapper .seekbar::-webkit-slider-runnable-track {
   -webkit-appearance: none;
   width: 100%;
   height: 4px;
@@ -11369,7 +11369,7 @@ body .card-body {
   background-color: #e2e2e2;
 }
 
-.player-container .player-controls .seekbar-wrapper #seekbar::-webkit-slider-thumb {
+.player-container .player-controls .seekbar-wrapper .seekbar::-webkit-slider-thumb {
   -webkit-appearance: none;
   width: 12px;
   height: 12px;
@@ -11380,7 +11380,7 @@ body .card-body {
   cursor: pointer;
 }
 
-.player-container .player-controls .seekbar-wrapper #seekbar {
+.player-container .player-controls .seekbar-wrapper .seekbar {
   outline: none;
 }
 
@@ -11441,6 +11441,11 @@ body .card-body {
 .player-container .player-controls .buttons-wrapper .volume-button img {
   width: 20px;
   margin-left: 1px;
+}
+
+.login-button {
+  color: white !important;
+  transition: 100ms ease;
 }
 
 footer {
@@ -11504,23 +11509,23 @@ footer .nav-footer .newsletter input {
 }
 
 footer .nav-footer .newsletter input::-webkit-input-placeholder {
-  color: white;
+  color: #ff7c7c;
 }
 
 footer .nav-footer .newsletter input::-moz-placeholder {
-  color: white;
+  color: #ff7c7c;
 }
 
 footer .nav-footer .newsletter input:-ms-input-placeholder {
-  color: white;
+  color: #ff7c7c;
 }
 
 footer .nav-footer .newsletter input::-ms-input-placeholder {
-  color: white;
+  color: #ff7c7c;
 }
 
 footer .nav-footer .newsletter input::placeholder {
-  color: white;
+  color: #ff7c7c;
 }
 
 footer .copy {
@@ -11725,6 +11730,11 @@ footer .copy span {
   }
 }
 
+.owl-nav,
+.owl-dots {
+  display: none !important;
+}
+
 .carousel-wrapper-1 {
   margin: -120px auto 0 auto;
   display: flex;
@@ -11889,6 +11899,36 @@ footer .copy span {
   color: #E51E27;
 }
 
+.btn-secondary,
+.btn-checkout {
+  background: none;
+  border: none;
+  background-color: #E51E27;
+  color: white;
+  padding: 12px 56px;
+  border-radius: 8px;
+  cursor: pointer;
+  outline: none;
+  font-family: "Montserrat";
+  font-size: 18px;
+  margin: 10px 0px;
+  transition: 160ms ease-in-out;
+  font-weight: 600;
+}
+
+.btn-secondary:hover,
+.btn-checkout:hover {
+  background-color: #ff4952;
+}
+
+.btn-checkout {
+  background-color: #272727;
+}
+
+.btn-checkout:hover {
+  background-color: #3a3a3a;
+}
+
 @media screen and (max-width: 800px) {
   .sign-container {
     background-color: #272727;
@@ -11991,21 +12031,21 @@ footer .copy span {
   color: white;
   transition: 150ms ease-in-out;
   border: none;
-  background-color: #E51E27;
+  background-color: #272727;
   font-size: 16px;
 }
 
 .sample-item .sample-details .double-buttons button:hover,
 .sample-item .sample-details .double-buttons a:hover {
-  background-color: #f72934;
+  background-color: #3b3b3b;
 }
 
 .sample-item .sample-details .double-buttons .button-cancel {
-  background-color: #272727;
+  background-color: #f72934;
 }
 
 .sample-item .sample-details .double-buttons .button-cancel:hover {
-  background-color: #3b3b3b;
+  background-color: #fd4b54;
 }
 
 .cart-container {
@@ -12025,10 +12065,19 @@ footer .copy span {
 
 .cart-container .cart-item,
 .cart-container .cart-item-total {
+  box-shadow: 0px 20px 35px #6464642f;
+}
+
+.cart-container .cart-item-total .cart-item-details {
+  font-size: 20px;
+}
+
+.cart-container .cart-item,
+.cart-container .cart-item-total {
   margin: 0px 0px 25px 0px;
   position: relative;
   width: 100%;
-  height: 180px;
+  height: 150px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -12064,7 +12113,9 @@ footer .copy span {
 }
 
 .cart-container .cart-item .cart-item-details p,
-.cart-container .cart-item-total .cart-item-details p {
+.cart-container .cart-item .cart-item-details span,
+.cart-container .cart-item-total .cart-item-details p,
+.cart-container .cart-item-total .cart-item-details span {
   font-weight: 600;
 }
 
@@ -12083,12 +12134,27 @@ footer .copy span {
   height: 100%;
   max-width: 200px;
   background-color: #E51E27;
+  transition: 150ms ease-in;
+}
+
+.cart-container .cart-item .cart-delete:hover,
+.cart-container .cart-item-total .cart-delete:hover {
+  background-color: #ff443d;
 }
 
 .cart-container .cart-item .cart-delete img,
 .cart-container .cart-item-total .cart-delete img {
   width: 25px;
   cursor: pointer;
+}
+
+.cart-container .cart-item .cart-delete a,
+.cart-container .cart-item-total .cart-delete a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .double-buttons-cart {
@@ -12110,19 +12176,19 @@ footer .copy span {
   transition: 150ms ease;
 }
 
-.double-buttons-cart .button-cancel {
+.double-buttons-cart .button-checkout {
   background-color: #272727;
 }
 
-.double-buttons-cart .button-cancel:hover {
+.double-buttons-cart .button-checkout:hover {
   background-color: #383838;
 }
 
-.double-buttons-cart .button-checkout {
+.double-buttons-cart .button-cancel {
   background-color: #E51E27;
 }
 
-.double-buttons-cart .button-checkout:hover {
+.double-buttons-cart .button-cancel:hover {
   background-color: #f0313b;
 }
 
@@ -12140,5 +12206,34 @@ footer .copy span {
   .cart-item-details p {
     margin: 10px !important;
   }
+}
+
+.container-checkout {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
+}
+
+.container-checkout h2 {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.form-checkout {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
+}
+
+.form-checkout .row {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
