--- a/sampleStore/resources/sass/home.scss
+++ b/sampleStore/resources/sass/home.scss
@@ -176,7 +176,7 @@ body{
                 }
             }
 
-            #seekbar{
+            .seekbar{
                 -webkit-appearance: none;
                 width: 170px;
 
@@ -271,6 +271,11 @@ body{
     
 }
 
+.login-button{
+    color: white!important;
+    transition: 100ms ease;
+}
+
 footer{
     position: relative;
     width: 100%;
@@ -330,7 +335,7 @@ footer{
                 outline: none;
 
                 &::placeholder{
-                    color: white;
+                    color: #ff7c7c;
                 }
             }
         }
@@ -568,6 +573,11 @@ footer{
 
 
 // OWL
+.owl-nav,
+.owl-dots{
+    display: none!important;
+}
+
 .carousel-wrapper-1{
     margin: -120px auto 0 auto;
     display: flex;
