--- a/sampleStore/resources/sass/home.scss
+++ b/sampleStore/resources/sass/home.scss
@@ -552,6 +552,15 @@ footer{
     }
 }
 
+@media screen and (max-width: 730px){
+
+    .item{
+        margin-right: 140px!important;
+        margin-left: 100px!important;
+    }
+
+}
+
 @media screen and (max-width: 400px){
     .player-container{
         width: 280px!important;
@@ -569,8 +578,6 @@ footer{
     }
 
 }
-
-
 
 // OWL
 .owl-nav,
