--- a/sampleStore/resources/sass/home.scss
+++ b/sampleStore/resources/sass/home.scss
@@ -279,7 +279,7 @@ body{
 footer{
     position: relative;
     width: 100%;
-    height: 400px;
+    height: 300px;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -435,6 +435,7 @@ footer{
     }
 
     footer{
+        height: 300px!important;
         flex-flow: column;
 
         .logo-box{
