--- a/sampleStore/resources/sass/sign.scss
+++ b/sampleStore/resources/sass/sign.scss
@@ -185,11 +185,11 @@
 
 @media screen and (min-width: 576px){
     .container{
-        width: 100%!important;
-        max-width: none!important;
-        padding: 0!important;
-        margin: 0!important;
-        margin: 0!important;
-        height: auto!important;
+        // width: 100%!important;
+        // max-width: none!important;
+        // padding: 0!important;
+        // margin: 0!important;
+        // margin: 0!important;
+        // height: auto!important;
     }
 }
