--- a/sampleStore/resources/sass/ajustes.scss
+++ b/sampleStore/resources/sass/ajustes.scss
@@ -15,11 +15,17 @@
     margin-right: 5px!important;
 }
 
-.username-span{
+.username-p{
     color: white;
+    text-align: center!important;
+    margin-right: 60px;
 }
 
 .img-store{
     margin-bottom: 10px;
     max-width: 350px;
+}
+
+#logo-footer{
+    width: 280px;
 }
