--- a/sampleStore/resources/sass/home.scss
+++ b/sampleStore/resources/sass/home.scss
@@ -98,7 +98,7 @@ body{
         background-color: $primary-color;
 
         img{
-            width: auto;
+            width: 100%;
             height: 100%;
         }
 
