--- a/sampleStore/resources/sass/ajustes.scss
+++ b/sampleStore/resources/sass/ajustes.scss
@@ -21,6 +21,10 @@
     margin-right: 60px;
 }
 
+.username-span{
+    color: white;
+}
+
 .img-store{
     margin-bottom: 10px;
     max-width: 350px;
