Upload Image Categorias & Fixed Bugs Deletar Categoria & Store
Correção nas migrations, add img nas categorias, fixed bug delete categoria and store,

-- rodar novamente as migrations --

rodar npm run watch..

--- a/sampleStore/public/css/app.css
+++ b/sampleStore/public/css/app.css
@@ -12286,3 +12286,15 @@ footer .copy a {
   width: 280px;
 }
 
+@font-face {
+  font-family: SatellaRegular-ZVVaz;
+  src: url(/fonts/SatellaRegular-ZVVaz.ttf?84c5a07cde8217248334b5c607f41a27);
+}
+
+.title {
+  font-family: SatellaRegular-ZVVaz;
+  font-size: 45px;
+  letter-spacing: 4px;
+  text-shadow: 0px 3px 4px rgba(255, 0, 0, 0.73);
+}
+
