--- a/sampleStore/resources/sass/app.scss
+++ b/sampleStore/resources/sass/app.scss
@@ -1,28 +1,17 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap');
-
 // Variables
 @import 'variables';
-
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
-
 @import 'reset';
-
 @import 'palette';
-
 @import 'menu';
-
 @import 'home';
-
 @import 'sign';
-
 @import 'sample';
-
 @import 'single';
-
 @import 'cart';
-
 @import 'checkout';
-
 @import 'ajustes';
+@import 'title';
