--- a/sampleStore/public/css/app.css
+++ b/sampleStore/public/css/app.css
@@ -11598,7 +11598,7 @@ footer .copy a {
 }
 
 .category-box .category-cover-image img {
-  width: auto;
+  width: 100%;
   height: 100%;
 }
 
@@ -11846,7 +11846,7 @@ footer .copy a {
 }
 
 .sign-container .sign .side img {
-  max-width: 220px;
+  max-width: 320px;
 }
 
 .sign-container .sign .inputs {
@@ -12296,5 +12296,13 @@ footer .copy a {
   font-size: 45px;
   letter-spacing: 4px;
   text-shadow: 0px 3px 4px rgba(255, 0, 0, 0.73);
+}
+
+.titleCategoria {
+  font-family: SatellaRegular-ZVVaz;
+  font-size: 20px;
+  letter-spacing: 2px;
+  text-shadow: 0px 3px 4px rgba(255, 0, 0, 0.73);
+  margin-top: 18px;
 }
 
