--- a/sampleStore/resources/sass/home.scss
+++ b/sampleStore/resources/sass/home.scss
@@ -330,7 +330,7 @@ footer {
         height: 50%;
         background-color: $primary-color;
         img {
-            width: auto;
+            width: 100%;
             height: 100%;
         }
     }
