--- a/sampleStore/resources/sass/title.scss
+++ b/sampleStore/resources/sass/title.scss
@@ -9,3 +9,11 @@
     letter-spacing: 4px;
     text-shadow: 0px 3px 4px rgba(255, 0, 0, 0.73);
 }
+
+.titleCategoria {
+    font-family: SatellaRegular-ZVVaz;
+    font-size: 20px;
+    letter-spacing: 2px;
+    text-shadow: 0px 3px 4px rgba(255, 0, 0, 0.73);
+    margin-top: 18px;
+}
