--- a/sampleStore/public/css/app.css
+++ b/sampleStore/public/css/app.css
@@ -11045,6 +11045,7 @@ body nav.nav-app {
 
 body .logo {
   z-index: 100;
+  margin-right: 10px;
 }
 
 body .logo img {
@@ -11065,6 +11066,10 @@ body nav.nav-app ul li:not(:last-child) a.nav-link {
   text-decoration: none;
   color: white;
   text-align: center;
+}
+
+body nav.nav-app ul li:not(:last-child) a.nav-link-drop {
+  color: #272727;
 }
 
 body nav.nav-app ul li a {
@@ -11119,7 +11124,7 @@ body .menu-icon {
   transform: translateX(0) !important;
 }
 
-@media screen and (max-width: 1250px) {
+@media screen and (max-width: 1450px) {
   nav.nav-app {
     padding: 20px 50px !important;
   }
@@ -11127,11 +11132,11 @@ body .menu-icon {
 
 @media screen and (max-width: 1090px) {
   nav.nav-app {
-    padding: 20px 30px !important;
+    padding: 20px 10px !important;
   }
 }
 
-@media screen and (max-width: 1070px) {
+@media screen and (max-width: 1230px) {
   nav.nav-app {
     padding: 20px 30px !important;
   }
@@ -12284,6 +12289,10 @@ footer .copy a {
 
 #logo-footer {
   width: 280px;
+}
+
+.container-categoria {
+  min-height: 500px !important;
 }
 
 @font-face {
