--- a/sampleStore/resources/sass/menu.scss
+++ b/sampleStore/resources/sass/menu.scss
@@ -27,8 +27,9 @@ body{
     }
 
      .logo {
-         z-index: 100;
-    
+        z-index: 100;
+        margin-right: 10px;
+
         img{
             width: 200px;
         }
@@ -50,6 +51,10 @@ body{
                 text-decoration: none;
                 color: white;
                 text-align: center;
+            }
+
+            a.nav-link-drop{
+                color: $secondary-color;
             }
             
         }
@@ -115,7 +120,7 @@ body{
 
 // Media queries
 
-@media screen and (max-width: 1250px){
+@media screen and (max-width: 1450px){
     
     nav.nav-app{
         padding: 20px 50px!important;
@@ -126,12 +131,12 @@ body{
 @media screen and (max-width: 1090px){
     
     nav.nav-app{
-        padding: 20px 30px!important;
+        padding: 20px 10px!important;
     }
 
 }
 
-@media screen and (max-width: 1070px){
+@media screen and (max-width: 1230px){
     
     nav.nav-app{
         padding: 20px 30px!important;
