--- a/sampleStore/public/css/app.css
+++ b/sampleStore/public/css/app.css
@@ -11070,6 +11070,12 @@ body nav.nav-app ul li:not(:last-child) a.nav-link {
 
 body nav.nav-app ul li:not(:last-child) a.nav-link-drop {
   color: #272727;
+  text-align: left;
+}
+
+body nav.nav-app ul li:not(:last-child) a:hover {
+  background-color: #272727;
+  color: white;
 }
 
 body nav.nav-app ul li a {
@@ -12304,14 +12310,14 @@ footer .copy a {
   font-family: SatellaRegular-ZVVaz;
   font-size: 45px;
   letter-spacing: 4px;
-  text-shadow: 0px 3px 4px rgba(255, 0, 0, 0.73);
+  text-shadow: 0px 3px 4px rgba(18, 72, 248, 0.73);
 }
 
 .titleCategoria {
   font-family: SatellaRegular-ZVVaz;
   font-size: 20px;
   letter-spacing: 2px;
-  text-shadow: 0px 3px 4px rgba(255, 0, 0, 0.73);
+  text-shadow: 0px 3px 4px rgba(18, 72, 248, 0.73);
   margin-top: 18px;
 }
 
